--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
      <p>- Zhenguo Hu, Penghui Gui, Ziqing Feng, Qijun Zhao, <strong>Keren Fu*</strong>, Feng Liu, Zhengxi Liu. Boosting Depth-based Face Recognition from a Quality Perspective, Sensors, Accepted. (IF=3.031)</p>
-     <p>- <strong>Keren Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Jie Yang, Deepside: A General Deep Framework for Salient Object Detection, Neurocomputing, 356: 69-82, 2019. (IF=3.32)</p>
+     <p>- <strong>Keren Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Jie Yang, Deepside: A General Deep Framework for Salient Object Detection, Neurocomputing, 356: 69-82, 2019. (IF=3.32)<a href="https://pan.baidu.com/s/1UOmBfjQiNyp1FkfKJ5bovQ" download>[<font color="blue">results</font>]</a>[<font color="blue">extraction code: xcjw</font>]</a></p></p>
      <p>- <strong>Keren Fu</strong>, Yijiang Xie, Hailong Jing, Jiangping Zhu, Fast Spatial-temporal Stereo Matching for 3D Face Reconstruction under Speckle Pattern Projection, Image and Vision Computing, 85: 36-45, 2019. (IF=2.16)</p>        
      <p>- Lei Zhou, <strong>Keren Fu</strong>, Zhi Liu, Fan Zhang, Zhimin Yin, Xiangyong Kong, Jianli Zheng, Superpixel based Continuous Conditional Random Field Neural Network for Semantic Segmentation, Neurocomputing, 340: 196-210, 2019. (IF=3.32)</p>
      
-    <p><strong>- Keren  Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Refinet: A Deep Segmentation Assisted Refinement Network for Salient Object Detection, IEEE Transactions on Multimedia, 21(2): 457-469, 2018. (IF=3.51)</p>
+    <p><strong>- Keren  Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Refinet: A Deep Segmentation Assisted Refinement Network for Salient Object Detection, IEEE Transactions on Multimedia, 21(2): 457-469, 2018. (IF=3.51)<a href="https://pan.baidu.com/s/1ge5diCKrBaW9pFVa1ZkKVQ" download>[<font color="blue">results</font>]</a>[<font color="blue">extraction code: iziq</font>]</a></p>
     
 
     <p><strong>- Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, 275: 788-803, 2018. (IF=3.32)<a href="sources/NEUCOM_2017(final).pdf" download>[<font color="blue">pdf</font>]</a><a href="sources/Neuro_demo.zip" download>[<font color="blue">code</font>]</a></p>
