--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
     <p>- Chen Gong, <strong>Keren Fu</strong>, Enmei Tu, Jie Yang, Xiangjian He, &ldquo;Robust object tracking  using linear neighborhood propagation,&rdquo; Journal of Electronic Imaging, 2013.  (IF=0.754) )<a href="sources/NP_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a> <br>
       - <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Yu-Hua Gu, &ldquo;One-class support  vector machine-assisted robust tracking,&rdquo; Journal of Electronic Imaging, 22(2),  2013. (IF= 0.754)<a href="sources/OCSVM_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a><br>
     <h3><strong>Conference papers</strong></h3>
-    <p>- Zhicong Feng, <strong> Keren Fu*</strong>, Qijun Zhao, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image Processing (ICIP), 2019.<a href="sources/ICIP2019.pdf" download>[<font color="blue">pdf</font>]</a><br>
+    <p>- Kangkang Gao, Shanming Yang, <strong> Keren Fu*</strong>, Peng Cheng, &ldquo;Deep 3D Facial Landmark Detection on Position Maps,&rdquo; in IScIDE, 2019.<a href="https://link.springer.com/chapter/10.1007/978-3-030-36189-1_25">[<font color="blue">pdf</font>]</a><br>
+    - Zhicong Feng, <strong> Keren Fu*</strong>, Qijun Zhao, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image Processing (ICIP), 2019.<a href="sources/ICIP2019.pdf" download>[<font color="blue">pdf</font>]</a><br>
        - <strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
       - <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
 
