--- a/index.html
+++ b/index.html
@@ -87,17 +87,12 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: The paper on RGB-D SOD is accepted by CVPR2020!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-9: One paper is accepted by Sensors Journal!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One ICIP paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-2: One Image and Vision Computing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-1: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2018-6: One IEEE TMM accepted!</h4>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10: I start working on a project  aiming at 3D face cameras. Please see &quot;Projects&quot; item for more info.</h4>
-                <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-9: One Neurocomputing paper accepted!</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8: NSFC fund on video saliency detecion granted!                     </h4>
-                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">2017-5: One IEEE TCSVT accepted!</h4>
-                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">2017-4: One IEEE TMM accepted!</h4>
               </div>
     </div>
   </div>
@@ -193,7 +188,8 @@
     <p>- Chen Gong, <strong>Keren Fu</strong>, Enmei Tu, Jie Yang, Xiangjian He, &ldquo;Robust object tracking  using linear neighborhood propagation,&rdquo; Journal of Electronic Imaging, 2013.  (IF=0.754) )<a href="sources/NP_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a> <br>
       - <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Yu-Hua Gu, &ldquo;One-class support  vector machine-assisted robust tracking,&rdquo; Journal of Electronic Imaging, 22(2),  2013. (IF= 0.754)<a href="sources/OCSVM_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a><br>
     <h3><strong>Conference papers</strong></h3>
-    <p>- Kangkang Gao, Shanming Yang, <strong> Keren Fu*</strong>, Peng Cheng, &ldquo;Deep 3D Facial Landmark Detection on Position Maps,&rdquo; in IScIDE, 2019.<a href="https://link.springer.com/chapter/10.1007/978-3-030-36189-1_25">[<font color="blue">pdf</font>]</a><br>
+    <p>- <strong> Keren Fu</strong>, Deng-Ping Fan, Ge-Peng Ji, Qijun Zhao, &ldquo;JL-DCF: Joint Learning and Densely-Cooperative Fusion Framework for RGB-D Salient Object Detection,&rdquo; accepted to CVPR 2020.<br>
+     - Kangkang Gao, Shanming Yang, <strong> Keren Fu*</strong>, Peng Cheng, &ldquo;Deep 3D Facial Landmark Detection on Position Maps,&rdquo; in IScIDE, 2019.<a href="https://link.springer.com/chapter/10.1007/978-3-030-36189-1_25">[<font color="blue">pdf</font>]</a><br>
     - Zhicong Feng, <strong> Keren Fu*</strong>, Qijun Zhao, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image Processing (ICIP), 2019.<a href="sources/ICIP2019.pdf" download>[<font color="blue">pdf</font>]</a><br>
        - <strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
       - <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
