--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">IEEE Access</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Sensors</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
