--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-6: One IEEE SPL paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One IEEE TMM paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One Neurocomputing paper accepted!</h4>
@@ -154,9 +155,10 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+    <p>- Ye Lin, Shenggui Ling, <strong>Keren Fu</strong>, Peng Cheng. An Identity-Preserved Model for Face Sketch-Photo Synthesis, IEEE Signal Processing Letters, Accepted.</p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Peng Cheng. Learning from Discrete Gaussian Label Distribution and Spatial Channel-aware Residual Attention for Head Pose Estimation, Neurocomputing, Accepted.</p>
      <p>- Lei Zhou, <a href="http://www.escience.cn/people/chengong/index.html"><u>Chen Gong</u></a>, <a href="http://www.ivp.shu.edu.cn/Default.aspx?tabid=31916"><u>Zhi Liu</u></a>, <strong>Keren Fu</strong>. SAL:Selection and Attention Losses for Weakly Supervised Semantic Segmentation, IEEE Transactions on Multimedia, Accepted.</p>
-     <p>- Jingchen Zhang, Kangkang Gao, <strong>Keren Fu*</strong>, Peng Cheng. Deep 3D Facial Landmark Localization on Position Maps, Neurocomputing, Accepted.</p>
+     <p>- Jingchen Zhang, Kangkang Gao, <strong>Keren Fu*</strong>, Peng Cheng. Deep 3D Facial Landmark Localization on Position Maps, Neurocomputing, 406: 89-98, 2020.</p>
      <p>- Yu Zhao, <strong>Keren Fu*</strong>, Qiaoyuan Shu, Pengcheng Wei, Xi Shi. Multilevel deep representation fusion for person re-identification, Journal of Electronic Imaging, 29(2), 2020.</p>
      <p>- Zhenguo Hu, Penghui Gui, Ziqing Feng, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, <strong>Keren Fu*</strong>, Feng Liu, Zhengxi Liu. Boosting Depth-based Face Recognition from a Quality Perspective, Sensors, 19(19), 2019.</p>
      <p>- <strong>Keren Fu</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, Irene Yu-Hua Gu, Jie Yang, Deepside: A General Deep Framework for Salient Object Detection, Neurocomputing, 356: 69-82, 2019. <a href="https://pan.baidu.com/s/1UOmBfjQiNyp1FkfKJ5bovQ" download>[<font color="blue">results</font>]</a>[<font color="blue">extraction code: xcjw</font>]</a></p>
