--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One IEEE TMM paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: One paper on RGB-D SOD is accepted by CVPR2020!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: One paper on RGB-D SOD is accepted by CVPR2020!<a href="https://github.com/kerenfu/JLDCF/">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-9: One paper is accepted by Sensors Journal!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One ICIP paper accepted!</h4>
@@ -188,7 +188,7 @@
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- <strong> Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;JL-DCF: Joint Learning and Densely-Cooperative Fusion Framework for RGB-D Salient Object Detection,&rdquo; accepted to CVPR 2020. <a href="https://arxiv.org/pdf/2004.08515.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">code</font>]</a><a href="http://dpfan.net/JLDCF/">[<font color="red">project</font>]</a><br>
+    <p>- <strong> Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;JL-DCF: Joint Learning and Densely-Cooperative Fusion Framework for RGB-D Salient Object Detection,&rdquo; accepted to CVPR 2020. <a href="https://arxiv.org/pdf/2004.08515.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br>
      - Kangkang Gao, Shanming Yang, <strong> Keren Fu*</strong>, Peng Cheng, &ldquo;Deep 3D Facial Landmark Detection on Position Maps,&rdquo; in IScIDE, 2019.<a href="https://link.springer.com/chapter/10.1007/978-3-030-36189-1_25">[<font color="blue">pdf</font>]</a><br>
     - Zhicong Feng, <strong> Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image Processing (ICIP), 2019.<a href="sources/ICIP2019.pdf" download>[<font color="blue">pdf</font>]</a><br>
        - <strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
