--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-9: I serve as a TPC member for AAAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-8: One Image and Vision Computing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-6: One IEEE SPL paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-5: One Neurocomputing paper accepted!</h4>
@@ -284,7 +285,7 @@
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Journal of Ambient Intelligence and Smart Environment</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018 </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR-2017, ISBA-2018, AAAI-2021 </h4>
         </div>
       </div>
     </div>
