--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: One Pattern Recognition paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: I serve as a TPC member for IJCAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-9: I serve as a TPC member for AAAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-8: One Image and Vision Computing paper accepted!</h4>
@@ -153,6 +154,7 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+    <p>- Qian Chen, <strong>Keren Fu</strong>, Ze Liu, Geng Chen, Hongwei Du, Bensheng Qiu. EF-Net: A Novel Enhancement and Fusion Network for RGB-D Saliency Detection, Pattern Recognition, Accepted.</p>
     <p>- Yu Zhao, Qiaoyuan Shu, <strong>Keren Fu</strong>, Pengcheng Wei, Jian Zhan. Joint patch and instance discrimination learning for unsupervised person re-identification, Image and Vision Computing, 104000, 2020.</p>
     <p>- Ye Lin, Shenggui Ling, <strong>Keren Fu</strong>, Peng Cheng. An Identity-Preserved Model for Face Sketch-Photo Synthesis, IEEE Signal Processing Letters, 27: 1095-1099, 2020.</p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Peng Cheng. Learning from Discrete Gaussian Label Distribution and Spatial Channel-aware Residual Attention for Head Pose Estimation, Neurocomputing, 407: 259-269, 2020.</p>
