--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: I was invited as a SPC member for IJCAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: One Pattern Recognition paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: I serve as a TPC member for IJCAI-2021!</h4>
@@ -191,7 +191,7 @@
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Qian Chen, Ze Liu, Yi Zhang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, Hongwei Du, &ldquo;RGB-D Salient Object Detection via 3D Convolutional Neural Networks,&rdquo; accepted to AAAI 2021. <br>
+    <p>- Qian Chen, Ze Liu, Yi Zhang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, Hongwei Du, &ldquo;RGB-D Salient Object Detection via 3D Convolutional Neural Networks,&rdquo; accepted to AAAI 2021. [<font color="black">pdf</font>]<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">github</font>]</a><br>
      - <strong> Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;JL-DCF: Joint Learning and Densely-Cooperative Fusion Framework for RGB-D Salient Object Detection,&rdquo; accepted to CVPR 2020. <a href="https://arxiv.org/pdf/2004.08515.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br>
      - Kangkang Gao, Shanming Yang, <strong> Keren Fu*</strong>, Peng Cheng, &ldquo;Deep 3D Facial Landmark Detection on Position Maps,&rdquo; in IScIDE, 2019.<a href="https://link.springer.com/chapter/10.1007/978-3-030-36189-1_25">[<font color="blue">pdf</font>]</a><br>
     - Zhicong Feng, <strong> Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image Processing (ICIP), 2019.<a href="sources/ICIP2019.pdf" download>[<font color="blue">pdf</font>]</a><br>
