--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-1: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">Github</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: We have released a Review and Benchmark for light field salient object detection!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Github</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: We have released a Review and Benchmark for Light Field Salient Object Detection!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: I was invited as a SPC member for IJCAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: One Pattern Recognition paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: I serve as a TPC member for IJCAI-2021!</h4>
