--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Ye Lin, Shenggui Ling, <strong>Keren Fu</strong>, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, Accepted.</p>
+    <p>- Ye Lin, <strong>Keren Fu</strong>, Shenggui Ling, Jiang Wang, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, Accepted.</p>
     <p>- <strong>Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, Qijun Zhao, Jianbing Shen, Ce Zhu. Siamese Network for RGB-D Salient Object Detection and Beyond, IEEE Transactions on Pattern Analysis and Machine Intelligence, Accepted. <a href="https://arxiv.org/pdf/2008.12134.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, Peng Cheng. Identity-and-Pose-Guided Generative Adversarial Network for Face Rotation, Neurocomputing, Accepted.</p>
     <p>- Bo Dong, Yan Zhou, Chuanfei Hu, <strong>Keren Fu*</strong>, Geng Chen. BCNet: Bidirectional Collaboration Network for Edge-Guided Salient Object Detection, Neurocomputing, 437: 58-71, 2021.</p>
