--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                <div class="col-md-8 col-sm-6"   >
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) with the College of Computer Science (<a href="http://scubrl.org/"><font size="4" color="blue">Link to Biometrics Research Laboratory</font></a>), Sichuan Univerisity, Chengdu, China. </h3>
-                    <!--<h4 class="wow fadeInUp" data-wow-delay="0.1s">(我现招收2021级入学的硕士研究生！)</h4>-->
+                    <h4 class="wow fadeInUp" data-wow-delay="0.1s">(我现招收2022级入学的硕士研究生，欢迎感兴趣的同学联系我！)</h4>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I received my dual Ph.D. degrees from both Shanghai Jiao Tong University and Chalmers University of Technology, Sweden, in 2016, and joined Sichuan University in 2017. </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analysis, stereo vision, and machine learning.</h3>
        
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: I will serve as a TPC member for IJCAI-2022!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by Neurocomputing!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by IEEE TII!</h4>
