--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Ge-Peng Ji, <strong>Keren Fu</strong>, Zhe Wu, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Jianbing Shen, Ling Shao, &ldquo;Full-Duplex Strategy for Video Object Segmentation,&rdquo; accepted to ICCV 2021. </p>
+    <p>- Ge-Peng Ji, <strong>Keren Fu</strong>, Zhe Wu, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Jianbing Shen, Ling Shao, &ldquo;Full-Duplex Strategy for Video Object Segmentation,&rdquo; accepted to ICCV 2021. <a href="https://arxiv.org/pdf/2108.03151.pdf">[<font color="red">pdf</font>]</a></p>
     <p>- Wenbo Zhang, Ge-Peng Ji, Zhuo Wang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;Depth Quality-Inspired Feature Manipulation for Efficient RGB-D Salient Object Detection,&rdquo; accepted to ACMMM 2021. <a href="https://arxiv.org/pdf/2107.01779.pdf">[<font color="red">pdf</font>]</a></p>
     <p>- Wenbo Zhang, Yao Jiang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;BTS-NET: Bi-directional Transfer-and-Selection Network for RGB-D Salient Object Detection,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2021. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9428263">[<font color="red">pdf</font>]</a><a href="https://github.com/zwbx/BTS-Net">[<font color="red">github</font>]</a><br>
       - Qian Chen, Ze Liu, Yi Zhang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, Hongwei Du, &ldquo;RGB-D Salient Object Detection via 3D Convolutional Neural Networks,&rdquo; in AAAI Conference on Artificial Intelligence (AAAI), 2021. <a href="https://arxiv.org/pdf/2101.10241.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">github</font>]</a><br>
@@ -305,7 +305,7 @@
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Journal of Ambient Intelligence and Smart Environment</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021 </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022</h4>
         </div>
       </div>
     </div>
