--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: I will serve as a TPC member for IJCAI-2022!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by Neurocomputing!</h4>
@@ -166,7 +166,7 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 2021, Accepted.</p>
+    <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
     <p>- Ye Lin, <strong>Keren Fu</strong>, Shenggui Ling, Jiang Wang, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, 2021, Accepted.</p>
     <p>- <strong>Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, Qijun Zhao, Jianbing Shen, Ce Zhu. Siamese Network for RGB-D Salient Object Detection and Beyond, IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021, Accepted. <a href="https://arxiv.org/pdf/2008.12134.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, Peng Cheng. Identity-and-Pose-Guided Generative Adversarial Network for Face Rotation, Neurocomputing, 450: 33-47, 2021.</p>
@@ -206,7 +206,7 @@
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Ge-Peng Ji, <strong>Keren Fu</strong>, Zhe Wu, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Jianbing Shen, Ling Shao, &ldquo;Full-Duplex Strategy for Video Object Segmentation,&rdquo; accepted to ICCV 2021. <a href="https://arxiv.org/pdf/2108.03151.pdf">[<font color="red">pdf</font>]</a></p>
+    <p>- Ge-Peng Ji, <strong>Keren Fu</strong>, Zhe Wu, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Jianbing Shen, Ling Shao, &ldquo;Full-Duplex Strategy for Video Object Segmentation,&rdquo; accepted to ICCV 2021. <a href="https://arxiv.org/pdf/2108.03151.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/GewelsJI/FSNet">[<font color="red">github</font>]</a></p>
     <p>- Wenbo Zhang, Ge-Peng Ji, Zhuo Wang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;Depth Quality-Inspired Feature Manipulation for Efficient RGB-D Salient Object Detection,&rdquo; accepted to ACMMM 2021. <a href="https://arxiv.org/pdf/2107.01779.pdf">[<font color="red">pdf</font>]</a></p>
     <p>- Wenbo Zhang, Yao Jiang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;BTS-NET: Bi-directional Transfer-and-Selection Network for RGB-D Salient Object Detection,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2021. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9428263">[<font color="red">pdf</font>]</a><a href="https://github.com/zwbx/BTS-Net">[<font color="red">github</font>]</a><br>
       - Qian Chen, Ze Liu, Yi Zhang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, Hongwei Du, &ldquo;RGB-D Salient Object Detection via 3D Convolutional Neural Networks,&rdquo; in AAAI Conference on Artificial Intelligence (AAAI), 2021. <a href="https://arxiv.org/pdf/2101.10241.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">github</font>]</a><br>
