--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media （CVMJ）!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Github</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: I will serve as a TPC member for IJCAI-2022!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!<a href="https://github.com/zwbx/DFM-Net">[<font color="red">Github</font>]</a></h4>
