--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+    <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu</strong>. Fast Camouaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition, 2021, Accepted.</p>
+    <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 2021, Accepted.</p>
+    <p>- <strong>Keren Fu</strong>, Yao Jiang, Ge-Peng Ji, Tao Zhou, Qijun Zhao, Deng-Ping Fan. Light Field Salient Object Detection: A Review and Benchmark, Computational Visual Media, 2021, Accepted.<a href="https://arxiv.org/pdf/2010.04968.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
-    <p>- Ye Lin, <strong>Keren Fu</strong>, Shenggui Ling, Jiang Wang, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, 2021, Accepted.</p>
+    <p>- Ye Lin, <strong>Keren Fu</strong>, Shenggui Ling, Jiang Wang, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, 18(1): 327-336, 2021.</p>
     <p>- <strong>Keren Fu</strong>, <a href="http://dpfan.net/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, Qijun Zhao, Jianbing Shen, Ce Zhu. Siamese Network for RGB-D Salient Object Detection and Beyond, IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021, Accepted. <a href="https://arxiv.org/pdf/2008.12134.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, Peng Cheng. Identity-and-Pose-Guided Generative Adversarial Network for Face Rotation, Neurocomputing, 450: 33-47, 2021.</p>
     <p>- Bo Dong, Yan Zhou, Chuanfei Hu, <strong>Keren Fu*</strong>, Geng Chen. BCNet: Bidirectional Collaboration Network for Edge-Guided Salient Object Detection, Neurocomputing, 437: 58-71, 2021.</p>
