--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-10: I am invited to serve as a reviewer for CVPR 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-9: One paper on few-shot learning-based RGB-D SOD is accepted by Neurocomputing!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
