--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-12: I am invited to serve as a PC member for IJCAI 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-10: I am invited to serve as a reviewer for CVPR 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-9: One paper on few-shot learning-based RGB-D SOD is accepted by Neurocomputing!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!<a href="https://github.com/QianChen98/RD3D">[<font color="red">Github</font>]</a></h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TMM!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-7: One paper is accepted by IEEE Signal Processing Letters!</h4>
@@ -179,19 +179,19 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- <strong>Keren Fu</strong>, Jing He, Xiao Yang. Few-Shot Learning-based RGB-D Salient Object Detection: A Case Study, Neurocomputing, 2022, Accepted.</p>
-    <p>- Qian Chen, Zhenxi Zhang, Yanye Lu, <strong>Keren Fu*</strong>, Qijun Zhao. 3D Convolutional Neural Networks for RGB-D
-Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 2022, Accepted.</p>
-    <p>- Huakun Yang, Qian Chen, <strong>Keren Fu</strong>, Lei Zhu, Lujia Jin, Qiushi Ren, Hongwei Du, Yanye Lu. Boosting Medical Image Segmentation via Conditional-Synergistic Convolution and Lesion Decoupling, Computerized Medical Imaging and Graphics, 2022, Accepted.</p>
+    <p>- <strong>Keren Fu</strong>, Jing He, Xiao Yang. Few-Shot Learning-based RGB-D Salient Object Detection: A Case Study, Neurocomputing, 512: 142-152, 2022.</p>
+    <p>- Qian Chen, Zhenxi Zhang, Yanye Lu, <strong>Keren Fu*</strong>, Qijun Zhao. 3-D Convolutional Neural Networks for RGB-D
+Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 2022, Accepted. <a href="https://github.com/QianChen98/RD3D">[<font color="red">github</font>]</a></p>
+    <p>- Huakun Yang, Qian Chen, <strong>Keren Fu</strong>, Lei Zhu, Lujia Jin, Qiushi Ren, Hongwei Du, Yanye Lu. Boosting Medical Image Segmentation via Conditional-Synergistic Convolution and Lesion Decoupling, Computerized Medical Imaging and Graphics, 101: 102110, 2022.</p>
     <p>- Geng Chen, Huazhu Fu, Tao Zhou, Guobao Xiao, <strong>Keren Fu</strong>, Yong Xia, Yanning Zhang. Fusion-Embedding Siamese Network for Light Field Salient Object Detection, IEEE Transactions on Multimedia, 2022, Accepted.</p>
-    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 2022, Accepted.</p>
+    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 29: 1674-1678, 2022. <a href="https://github.com/mindingyao/MGT-Net">[<font color="red">github</font>]</a></p>
     <p>- Yao Jiang, Wenbo Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. MEANet: Multi-Modal Edge-Aware Network for Light Field Salient Object Detection, Neurocomputing, 491: 78-90, 2022.</p>
     <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition,  123: 108414, 2022.</p>
-    <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 2021, Accepted.</p>
+    <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 9(1): 155-175, 2023.</p>
     <p>- <strong>Keren Fu</strong>, Yao Jiang, Ge-Peng Ji, Tao Zhou, Qijun Zhao, Deng-Ping Fan. Light Field Salient Object Detection: A Review and Benchmark, Computational Visual Media, 8(4): 509-534, 2022.<a href="https://link.springer.com/article/10.1007/s41095-021-0256-2">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
     <p>- Ye Lin, <strong>Keren Fu</strong>, Shenggui Ling, Jiang Wang, Peng Cheng. Toward Identity Preserving Face Synthesis between Sketches and Photos Using Deep Feature Injection, IEEE Transactions on Industrial Informatics, 18(1): 327-336, 2021.</p>
-    <p>- <strong>Keren Fu</strong>, <a href="https://dengpingfan.github.io/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, Qijun Zhao, Jianbing Shen, Ce Zhu. Siamese Network for RGB-D Salient Object Detection and Beyond, IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021, Accepted. <a href="https://arxiv.org/pdf/2008.12134.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br></p>
+    <p>- <strong>Keren Fu</strong>, <a href="https://dengpingfan.github.io/"><u>Deng-Ping Fan</u></a>, Ge-Peng Ji, Qijun Zhao, Jianbing Shen, Ce Zhu. Siamese Network for RGB-D Salient Object Detection and Beyond, IEEE Transactions on Pattern Analysis and Machine Intelligence, 44(9): 5541-5559, 2022. <a href="https://arxiv.org/pdf/2008.12134.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/JLDCF/">[<font color="red">github</font>]</a><br></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, Peng Cheng. Identity-and-Pose-Guided Generative Adversarial Network for Face Rotation, Neurocomputing, 450: 33-47, 2021.</p>
     <p>- Bo Dong, Yan Zhou, Chuanfei Hu, <strong>Keren Fu*</strong>, Geng Chen. BCNet: Bidirectional Collaboration Network for Edge-Guided Salient Object Detection, Neurocomputing, 437: 58-71, 2021.<a href="https://github.com/dongbo811/Neurocomputing-SOD">[<font color="red">github</font>]</a></p>
     <p>- Qian Chen, <strong>Keren Fu</strong>, Ze Liu, Geng Chen, Hongwei Du, Bensheng Qiu. EF-Net: A Novel Enhancement and Fusion Network for RGB-D Saliency Detection, Pattern Recognition, 112: 107740, 2021.</p>
@@ -229,8 +229,9 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICONIP 2022.</p>
-    <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; accepted to ICIP 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a></p>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICME 2023.</p>
+    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICONIP 2022. <a href="https://github.com/mindingyao/IANet">[<font color="red">github</font>]</a></p>
+    <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; in IEEE International Conference on Image Processing (ICIP) 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/luyukang/DCTNet">[<font color="red">github</font>]</a></p>
     <p>- Zhuo Wang, Minyue Xiao, Jing He, Chao Zhang, <strong>Keren Fu</strong>, &ldquo;Bimodal Information Fusion Network for Salient Object Detection based on Transformer,&rdquo; in International Conference on Pattern Recognition and Machine Learning (PRML), 2022.</p>
     <p>- Ge-Peng Ji, <strong>Keren Fu</strong>, Zhe Wu, <a href="https://dengpingfan.github.io/"><u>Deng-Ping Fan</u></a>, Jianbing Shen, Ling Shao, &ldquo;Full-Duplex Strategy for Video Object Segmentation,&rdquo; in IEEE/CVF International Conference on Computer Vision (ICCV), 2021. <a href="https://arxiv.org/pdf/2108.03151.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/GewelsJI/FSNet">[<font color="red">github</font>]</a></p>
     <p>- Wenbo Zhang, Ge-Peng Ji, Zhuo Wang, <strong>Keren Fu*</strong>, <a href="http://scubrl.org/qjzhao"><u>Qijun Zhao</u></a>, &ldquo;Depth Quality-Inspired Feature Manipulation for Efficient RGB-D Salient Object Detection,&rdquo; in ACM International Conference on Multimedia (ACM MM), 2021. <a href="https://arxiv.org/pdf/2107.01779.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/zwbx/DFM-Net">[<font color="red">github</font>]</a></p>
