--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICME 2023.</p>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; accepted to ICME 2023.</p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICONIP 2022. <a href="https://github.com/mindingyao/IANet">[<font color="red">github</font>]</a></p>
     <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; in IEEE International Conference on Image Processing (ICIP) 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/luyukang/DCTNet">[<font color="red">github</font>]</a></p>
     <p>- Zhuo Wang, Minyue Xiao, Jing He, Chao Zhang, <strong>Keren Fu</strong>, &ldquo;Bimodal Information Fusion Network for Salient Object Detection based on Transformer,&rdquo; in International Conference on Pattern Recognition and Machine Learning (PRML), 2022.</p>
