--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-
+<h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>
                   
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
@@ -344,7 +344,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024</h4>
         </div>
       </div>
     </div>
