--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a>			</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
@@ -191,11 +192,13 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao. Parallax-aware Network for Light Field Salient Object Detection, IEEE Signal Processing Letters, 2024, Accepted.</p>
+    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang. LSTPNet: Long short-term perception network for dynamic facial expression recognition in the wild, Image and Vision Computing, 142: 104915, 2024.</p>
     <p>- <strong>Keren Fu</strong>, Jing He, Xiao Yang. Few-Shot Learning-based RGB-D Salient Object Detection: A Case Study, Neurocomputing, 512: 142-152, 2022.</p>
     <p>- Qian Chen, Zhenxi Zhang, Yanye Lu, <strong>Keren Fu*</strong>, Qijun Zhao. 3-D Convolutional Neural Networks for RGB-D
-Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 2022, Accepted. <a href="https://github.com/QianChen98/RD3D">[<font color="red">github</font>]</a></p>
+Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 35(3): 4309-4323, 2024. <a href="https://github.com/QianChen98/RD3D">[<font color="red">github</font>]</a></p>
     <p>- Huakun Yang, Qian Chen, <strong>Keren Fu</strong>, Lei Zhu, Lujia Jin, Qiushi Ren, Hongwei Du, Yanye Lu. Boosting Medical Image Segmentation via Conditional-Synergistic Convolution and Lesion Decoupling, Computerized Medical Imaging and Graphics, 101: 102110, 2022.</p>
-    <p>- Geng Chen, Huazhu Fu, Tao Zhou, Guobao Xiao, <strong>Keren Fu</strong>, Yong Xia, Yanning Zhang. Fusion-Embedding Siamese Network for Light Field Salient Object Detection, IEEE Transactions on Multimedia, 2022, Accepted.</p>
+    <p>- Geng Chen, Huazhu Fu, Tao Zhou, Guobao Xiao, <strong>Keren Fu</strong>, Yong Xia, Yanning Zhang. Fusion-Embedding Siamese Network for Light Field Salient Object Detection, IEEE Transactions on Multimedia, 26: 984-994, 2023.</p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 29: 1674-1678, 2022. <a href="https://github.com/mindingyao/MGT-Net">[<font color="red">github</font>]</a></p>
     <p>- Yao Jiang, Wenbo Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. MEANet: Multi-Modal Edge-Aware Network for Light Field Salient Object Detection, Neurocomputing, 491: 78-90, 2022.</p>
     <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition,  123: 108414, 2022.</p>
@@ -242,8 +245,8 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
      
     <h3><strong>Conference papers</strong></h3>
-    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang, &ldquo;Long Short-Term Perception Network for Dynamic Facial Expression Recognition,&rdquo; accepted to PRCV 2023.</p>
-    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; accepted to ICME 2023.</p>
+    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang, &ldquo;Long Short-Term Perception Network for Dynamic Facial Expression Recognition,&rdquo; in Chinese Conference on Pattern Recognition and Computer Vision (PRCV), 2023.</p>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2023.</p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; in International Conference on Neural Information Processing (ICONIP), 2022. <a href="https://github.com/mindingyao/IANet">[<font color="red">github</font>]</a></p>
     <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; in IEEE International Conference on Image Processing (ICIP), 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/luyukang/DCTNet">[<font color="red">github</font>]</a></p>
     <p>- Zhuo Wang, Minyue Xiao, Jing He, Chao Zhang, <strong>Keren Fu</strong>, &ldquo;Bimodal Information Fusion Network for Salient Object Detection based on Transformer,&rdquo; in International Conference on Pattern Recognition and Machine Learning (PRML), 2022.</p>
@@ -324,7 +327,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Introduction to Electronic Information
           <a href="sources/MLY-book.pdf" download>[<font color="blue">book</font>]
           <a href="sources/MLY-PPT-Part1.pdf" download>[<font color="blue">part1</font>]</a>
-          <!--<a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a>--></h4>
+          <a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a><!----></h4>
           <!--<h4 class="wow fadeInUp" data-wow-delay="0.1s">- Image Processing Specialization<a href="sources/图像处理专题—视觉显著性检测.pdf" download>[<font color="blue">pdf</font>]</a></h4>-->
         </div>
       </div>
