--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: I am invited to serve as a reviewer for CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: Two papers are accepted by IEEE TIP!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-7: One paper is accepted to ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-6: Four papers are accepted to PRCV 2024!</h4>
