--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-4: Our Samba work is selected as Highlight in CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: Two papers are accepted to CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: I am invited to serve as a reviewer for ICCV 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-12: Two papers are accepted to ICASSP 2025!</h4>
@@ -260,7 +261,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
     <h3><strong>Conference papers</strong></h3>
     
-    <p>- Jiahao He, <strong>Keren Fu*</strong>, Xiaohong Liu, Qijun Zhao, &ldquo;Samba: A Unified Mamba-based Framework for General Salient Object Detection,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Jia-hao999/Samba">[<font color="red">github</font>]</a></p>
+    <p>- Jiahao He, <strong>Keren Fu*</strong>, Xiaohong Liu, Qijun Zhao, &ldquo;Samba: A Unified Mamba-based Framework for General Salient Object Detection,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Jia-hao999/Samba">[<font color="red">Highlight paper | github</font>]</a></p>
     <p>- Yanfeng Li, Ka-Hou Chan, Yue Sun, Chan-Tong Lam, Tong Tong, Zitong Yu, <strong>Keren Fu</strong>, Xiaohong Liu, Tao Tan, &ldquo;MoEdit: On Learning Quantity Perception for Multi-object Image Editing,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Tear-kitty/MoEdit">[<font color="red">github</font>]</a></p>
     <p>- Xianjie Liu, <strong>Keren Fu*</strong>, Yao Jiang, Qijun Zhao &ldquo;DIS-SAM: Promoting Segment Anything Model
 towards Highly Accurate Dichotomous Image 
