--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
     <p>- Xin Zhang, Tao Xiao, Ge-Peng Ji, Xuan Wu, Keren Fu*, Qijun Zhao. Explicit Motion Handling and Interactive Prompting for Video Camouflaged Object Detection
-, IEEE Transactions on Image Processing, Accepted. <a href="https://github.com/jiangyao-scu/TLFNet">[<font color="red">github</font>]</a></p>
+, IEEE Transactions on Image Processing, Accepted. <a href="https://github.com/zhangxin06/EMIP">[<font color="red">github</font>]</a></p>
     <p>- Yao Jiang, Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao. Transformer-based Light Field Salient Object Detection and Its Application to Autofocus, IEEE Transactions on Image Processing, 33: 6647-6659, 2024. <a href="https://github.com/zhangxin06/EMIP">[<font color="red">github</font>]</a></p>
     
     <p>- Ao Mou, Yukang Lu, Jiahao He, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao. Salient Object Detection in RGB-D Videos, IEEE Transactions on Image Processing, 33: 6660-6675, 2024. <a href="https://github.com/kerenfu/RDVS/">[<font color="red">github</font>]</a>
